# minecraft-document-mcp

./: .gitignore  CLAUDE.md  README.md  fastmcp.json  pyproject.toml  server.py
minecraft_document_mcp/: __init__.py  cli.py
minecraft_document_mcp/src/api/: WikiApi.py  __init__.py
src/mcp/: __init__.py  cli.py
src/mcp/api/: WikiApi.py  WikiItems.py
src/mcp/dto/: document.py
src/mcp/entity/: document.py
src/mcp/request/: WikiApiRequest.py
src/mcp/service/: DocumentManagerInterface.py
src/mcp/service/impl/: DocumentManagerImpl.py
src/mcp/utils/: DocumentFileUtil.py
src/resources/document/command/java/: .json  list.md
