[project]
name = "minecraft-document-mcp"
version = "0.1.0"
description = "Minecraft Wiki 文档 MCP 服务器"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dataclasses-json>=0.6.7",
    "fastmcp==3.1.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "requests>=2.32.5",
]